--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -10,31 +10,30 @@
         <h2 class="text-secondary">Book List</h2>
     </div>
     <div class="col-md-3">
-        <a class="btn btn-primary text-white form-control" href="#">Add new book</a>
+        <a class="btn btn-primary text-white form-control" asp-page="Create">Add new book</a>
     </div>
 
     <div class="col-md-12 mt-3">
-        <table class="table table-striped">
+        <table class="table table-striped d-sm-table">
             <thead>
                 <tr class="text-center">
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Author</th>
-                    <th>Actions</th>
+                    <th><label asp-for="Book.FirstOrDefault().Name"></label></th>
+                    <th><label asp-for="Book.FirstOrDefault().Author"></label></th>
+                    <th><label asp-for="Book.FirstOrDefault().ISBN"></label></th>
+                    <th><label>Actions</label></th>
                 </tr>
             </thead>
             <tbody>
                 @{
-                    var count = 0;
                     foreach (var item in Model.Book)
                     {
                         <tr class="text-center">
-                            <td>@(++count)</td>
                             <td>@item.Name</td>
                             <td>@item.Author</td>
+                            <td>@item.ISBN</td>
                             <td>
-                                <a href="#" class="btn btn-secondary">Edit</a>
-                                <a href="#" class="btn btn-danger">Delete</a>
+                                <a asp-page="Edit" class="btn btn-secondary btn-sm">Edit</a>
+                                <button class="btn btn-danger btn-sm">Delete</button>
                             </td>
                         </tr>
                     }
@@ -44,6 +43,6 @@
     </div>
 
     <div class="col-md-12 text-center">
-        <a href="#">Back to Home</a>
+        <a asp-page="/Index">Back to Home</a>
     </div>
 </div>
