--- a/Pages/Books/Create.cshtml
+++ b/Pages/Books/Create.cshtml
@@ -8,13 +8,15 @@
 <h3 class="p-2">Create New Book</h3>
 
 <div class="container mt-5 p-2">
-    <form>
+    <form method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group row">
             <div class="col-md-3">
                 <label asp-for="Book.Name"></label>
             </div>
             <div class="col-md-6">
                 <input asp-for="Book.Name" class="form-control" autofocus/>
+                <span asp-validation-for="Book.Name" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
@@ -23,6 +25,7 @@
             </div>
             <div class="col-md-6">
                 <input asp-for="Book.Author" class="form-control"/>
+                <span asp-validation-for="Book.Author" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
@@ -31,6 +34,15 @@
             </div>
             <div class="col-md-6">
                 <input asp-for="Book.ISBN" class="form-control"/>
+                <span asp-validation-for="Book.ISBN" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="offset-md-3 col-md-3">
+                <button type="submit" class="btn btn-primary form-control">Create</button>
+            </div>
+            <div class="col-md-3">
+                <a asp-page="Index" class="btn btn-success form-control text-white">Back to List</a>
             </div>
         </div>
     </form>
