--- a/Pages/Books/Edit.cshtml
+++ b/Pages/Books/Edit.cshtml
@@ -1,15 +1,16 @@
 ﻿@page
-@model BooksRazorApp.Pages.Books.CreateModel
+@model BooksRazorApp.Pages.Books.EditModel
 @{
     ViewData["Title"] = "Create";
 }
 
 
-<h3 class="p-2">Create New Book</h3>
+<h3 class="p-2">Edit Book</h3>
 
 <div class="container mt-5 p-2">
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input asp-for="Book.ID" type="hidden"/>
         <div class="form-group row">
             <div class="col-md-3">
                 <label asp-for="Book.Name"></label>
@@ -39,10 +40,10 @@
         </div>
         <div class="form-group row">
             <div class="offset-md-3 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-primary form-control">Update</button>
             </div>
             <div class="col-md-3">
-                <a asp-page="Index" class="btn btn-success form-control text-white">Back to List</a>
+                <a asp-page="Index" class="btn btn-outline-secondary form-control">Cancel</a>
             </div>
         </div>
     </form>
